# tidygen

./: .env.example  .gitignore  BUDGET_SOLO.md  CHECK_LIST.md  CODE_OF_CONDUCT.md  COMMUNITY_VS_COMMERCIAL_COMPARISON.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPER_ONBOARDING.md  LICENSE  Makefile  MyDOC.txt  OFFICE_HOURS_REQUEST.md  PR_BODY.txt  PR_BODY_RELEASE.txt  README-Old.md  README.md  RISK_ASSESSMENT.md  ROADMAP.md  ROLES_PERMISSIONS_DOCUMENTATION.md  SECURITY.md  SYSTEM_OVERVIEW_SUMMARY.md  TEAM.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  WEB3_FEATURES_DOCUMENTATION.md  WEB3_QUICK_REFERENCE.md  demo_commands_quickref.md  demo_video_script.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  nginx.prod.conf  pr_body_w3f.md  pr_comment_short.md  pytest.ini  run_all_layer_tests.sh  run_integration_tests.sh  setup.sh
.github/workflows/: build-and-release.yaml  capture-quickstart-logs.yaml  ci.yml  dependencies.yml  integration-x86.yaml  integration-x86.yml  main.yml  release.yml  security.yml
applications/: README.md  tidygen_substrate_poc.md
apps/audit_trail/: apps.py  models.py  signals.py
apps/backend/: .flake8  APPLICATION.md  PLAN.md  README.md  TESTING_GUIDE.md  env.example  pyproject.toml  pytest-playwright.ini  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  test_setup_check.py
apps/backend/apps/accounts/: serializers.py  views.py
apps/backend/apps/analytics/: README.md  admin.py  filters.py  models.py  serializers.py  signals.py  tests.py  views.py
apps/backend/backend/: urls.py
apps/backend/e2e_tests/: conftest.py  test_homepage_flow.py
apps/backend/services/: INTEGRATION_SUMMARY.md  README.md  __init__.py  substrate_client.py  test_substrate_client.py
apps/backend/smart_contracts/: README.md  hardhat.config.js  package.json
apps/backend/substrate_poc/: README.md  deploy_contract.py  submit_service.py
apps/backend/tests/: conftest.py  test_freelancer_integration.py
apps/frontend/: DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  ENVIRONMENT_SETUP.md  README.md  docker-compose.yml  env.example  index.html  install.sh  package-lock.json  package.json  playwright.config.ts  vercel.json  vitest.config.ts
apps/frontend/docs/: COMMUNITY_CHECKLIST.md  CONTRIBUTING.md  community-setup.md  roadmap.md
apps/frontend/src/: App.tsx
apps/frontend/tests/: setup.ts
apps/substrate/: Cargo.toml  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  PALLETS_OVERVIEW.md  QUICKSTART.md  README.md  SUMMARY.md  run_all_tests.sh  setup.sh
apps/substrate/pallets/dao/: Cargo.toml  README.md  SUMMARY.md
apps/substrate/pallets/dao/src/: lib.rs  mock.rs  tests.rs
apps/substrate/pallets/did/: Cargo.toml  README.md  SUMMARY.md
apps/substrate/pallets/did/rpc/: Cargo.toml
apps/substrate/pallets/did/rpc/src/: lib.rs
apps/substrate/pallets/did/runtime-api/: Cargo.toml
apps/substrate/pallets/did/runtime-api/src/: lib.rs
apps/substrate/pallets/did/src/: lib.rs  mock.rs  tests.rs
apps/substrate/pallets/ledger/: Cargo.toml  README.md  SUMMARY.md
apps/substrate/pallets/ledger/src/: lib.rs
apps/substrate/pallets/tidygen-did/: Cargo.toml
apps/substrate/pallets/tidygen-ledger/: Cargo.toml
apps/substrate/pallets/tidygen-ledger/src/: lib.rs
contracts/: README.md  demo.md
contracts/escrow-sla/: Cargo.toml  README.md  lib.rs
contracts/escrow-sla/tests/: e2e_escrow.rs
contracts/substrate-pallet/: Cargo.toml  README.md
contracts/substrate-pallet/src/: lib.rs
contracts/substrate-poc/: Cargo.toml  README.md  lib.rs
docs/: API_REFERENCE.md  ARCHITECTURAL_REVIEW.md  ARCHITECTURE.md  AUDIT_BRIEF.md  AUDIT_REQUEST.md  BACKEND.md  BENCHMARKS.md  CHANGELOG_AND_RATIONALE.md  COMMIT_BUILD_ARTICRAFTS.md  DEMO_RECORDING_STEPS.md  DEVELOPMENT.md  GOVERNANCE.md  GRANT_PROPOSAL.md  HISTORY_AND_MODIFICATIONS.md  MARKET_ANALYSIS.md  MONOREPO_STRUCTURE.md  ONBOARDING.md  PILOT_PLAN.md  PITCH_SLIDES.md  REVIEWER_CHECKLIST.md  ROADMAP.md  TIDYGEN.md  USE_CASES.md  WEB3_TECHNICAL_IMPLEMENTATION.md  kyc_openai.yaml
docs/api-documentation/: API_ENDPOINTS_SUMMARY.md  README.md
docs/business-analysis/: MODULE_FEATURES_AND_BENEFITS.md  README.md
docs/deployment/: README.md
docs/grant/: project_overview.md  roadmap.md  web3_integration.md
docs/grant-application/: GRANT_APPLICATION_README.md  KYC_KYB_DOCUMENTATION.md  MILESTONE_DELIVERABLES.md  README.md  TEAM.md  TESTING_DOCUMENTATION.md  W3F_GRANT_APPLICATION_SUMMARY.md
docs/project-management/: README.md
docs/technical-specs/: COMPLETE_IMPLEMENTATION_SUMMARY.md  DECENTRALIZED_AUDIT_TRAIL_DOCUMENTATION.md  DECENTRALIZED_AUDIT_TRAIL_IMPLEMENTATION_PLAN.md  DID_API_DOCUMENTATION.md  DID_BASED_ACCESS_CONTROL_IMPLEMENTATION_PLAN.md  DID_BASED_ACCESS_CONTROL_SUMMARY.md  DID_IMPLEMENTATION_COMPLETE.md  FIELD_OPERATIONS_FACILITY_MANAGEMENT_SUMMARY.md  FRONTEND_BACKEND_INTEGRATION_SUMMARY.md  README.md  SMART_CONTRACT_LEDGER_IMPLEMENTATION_PLAN.md  SMART_CONTRACT_LEDGER_IMPLEMENTATION_SUMMARY.md  SMART_CONTRACT_LEDGER_INTEGRATION_GUIDE.md  TECHNICAL_FEATURES_AND_IMPLEMENTATION.md  WALLET_INTEGRATION_IMPLEMENTATION_PLAN.md  WALLET_INTEGRATION_SUMMARY.md
docs/testing/: README.md
docs/user-guides/: DID_USER_GUIDE.md
docs/web3/: README.md  WEB3_MODULE_BENEFITS_ANALYSIS.md  WEB3_TECHNICAL_IMPLEMENTATION.md
infra/ci-cd/github-actions/: ci.yml  deploy.yml
infra/docker/development/: docker-compose.prod.yml  docker-compose.yml
internal/: FREELANCER_CONTRACTOR_MODULES_ANALYSIS.md
internal/grant/: GRANT_PROPOSAL.md  WEB3_FOUNDATION_GRANT_COMPARISON.md
scripts/: README.md  build_contract.sh  docker-compose.quickstart.yml  download_release_artifacts.sh  install_cargo_contract.sh  quick_start.sh  quickstart-skipbuild.patch  quickstart.sh  record_terminal_asciinema.sh  run_integration_test.sh  run_quickstart_and_capture.sh  upload_demo_release.sh
scripts/deploy/: digitalocean-deploy.sh  render-deploy.sh  vercel-deploy.sh
scripts/deployment/: deploy-staging.sh
scripts/setup/: setup-dev.sh
tests/: README.md  conftest.py
tests/integration/: test_substrate_poc_quickstart.py
tools/: README.md
(+294 files in other folders)
