[package]
name = "service-verification-escrow"
version = "0.1.0"
authors = ["TidyGen Community"]
edition = "2021"

[dependencies]
ink = { version = "4.3", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
openbrush = { version = "4.0.0-rc", default-features = false, features = ["contracts", "traits"] }

[dev-dependencies]
ink_e2e = "4.3"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]

[lib]
name = "service_verification_escrow"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]