[package]
name = "service-verification-poc"
version = "0.1.0"
authors = ["TidyGen Community"]
edition = "2018"

[dependencies]
ink_primitives = { version = "4.0.0-alpha.1", default-features = false }
ink_metadata = { version = "4.0.0-alpha.1", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "4.0.0-alpha.1", default-features = false }
ink_storage = { version = "4.0.0-alpha.1", default-features = false }
ink_lang = { version = "4.0.0-alpha.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
getrandom = { version = "0.2", default-features = false, features = ["js"] }

[dev-dependencies]
ink_e2e = "4.0.0-alpha.1"

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

[lib]
name = "service_verification_poc"
path = "lib.rs"
crate-type = ["cdylib"]
